--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 Em 2022 com a proposta de ampliar tanto o conforto dos cachorros quanto de seus tutores,
                 além de oferecer novos espaços de socialização, a CooperDog mudou para uma nova sede, agora
-                entre o Alto da Lapa e Alto de Pinheiros.
+                entre o Alto da Lapa e Alto de Pinheiros
 
             </p>
         </div>
