--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <img src="assets/images/dogsCapa.jpeg" class="instalations-img" alt="Image 1">
         </figure>
         <figure class="instalations-itens w-1 h-1">
-            <img src="assets/images/WhatsApp Image 2022-06-08 at 10.35.00.jpeg" class="instalations-img" alt="Image 1">
+            <img src="assets/images/cachorros-na-grama.jpeg" class="instalations-img" alt="Image 1">
         </figure>
     </section>
 
