--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="stick">
+    <header class="header">
         <img src="assets/images/cooperdog.png" alt="Cooperdog" height="100px">
         <nav id="nav">
             <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
@@ -22,10 +22,10 @@
                 <span id="menuBurger"></span>
             </button>
             <ul id="menu" role="menu">
-                <li><a href="1.html">home</a></li>
-                <li><a href="2.html">serviços</a></li>
-                <li><a href="3.html">contato</a></li>
-                <li><a href="4.html">localização</a></li>
+                <li><a href="#">home</a></li>
+                <li><a href="#">serviços</a></li>
+                <li><a href="#">contato</a></li>
+                <li><a href="#">localização</a></li>
             </ul>
         </nav>
     </header>
