--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
 
     <main class="main">
         <section class="main-info">
-            <h5><b>Bem estar</b></h5><br>
-            <h3>em cada espaço</h3>
-            <p>Aqui o seu pet poderá brincar, correr, tomar banho, receber carinho e amor e, acima de tudo, se sentir
-                feliz. E
-                tudo isso vem de encontro com o estilo de vida que você possa vir a ter</p>
+            <h2>Bem estar</h2>
+            <h5>em cada espaço</h5>
+            <p>Aqui o seu pet poderá brincar, correr, tomar banho, receber carinho e amor e, acima de tudo, se
+                sentir feliz. E tudo isso vem de encontro com o estilo de vida que você possa vir a ter</p>
             <button class="btn-agendar">AGENDAR</button>
         </section>
     </main>
@@ -47,7 +46,7 @@
             <img src="assets/images/anna.jpeg">
         </div>
         <div class="story-text">
-            <h5>Quem <b>Somos</b></h5>
+            <h2>Quem <b>Somos</b></h2>
             <p>
                 Tudo começou em 1981 quando Anna Camargo, bióloga, precisava viajar e não encontrava
                 um hotel onde pudesse deixar seu pet. Com inicio na Vila Romana o hotel logo começou a
@@ -65,11 +64,9 @@
 
         <div class="services-description">
             <div class="services-text">
-                <h5 class="services-h5">Nossos <b>Serviços</b></h5>
-                <p class="services-p">Com maior capacidade de atendimento novos serviços estão sendo oferecidos trazendo
-                    mais
-                    conforto
-                    para os cães e aos seus tutores.
+                <h2>Nossos <b>Serviços</b></h2>
+                <p>Com maior capacidade de atendimento novos serviços estão sendo oferecidos trazendo
+                    mais conforto para os cães e aos seus tutores.
                 </p>
             </div>
         </div>
@@ -79,31 +76,31 @@
                 <div class="services-cards-details">
                     <i class="fa-solid fa-volleyball fa-3x"></i>
                 </div>
-                <h6>Day Care</h6>
+                <span class="lead">Day Care</span>
             </div>
             <div class="services-cards-card">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-bone fa-3x"></i>
                 </div>
-                <h6>Adestramento</h6>
+                <span class="lead">Adestramento</span>
             </div>
             <div class="services-cards-card">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-house-chimney fa-3x"></i>
                 </div>
-                <h6>Hotel</h6>
+                <span class="lead">Hotel</span>
             </div>
             <div class="services-cards-card">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-dog fa-3x"></i>
                 </div>
-                <h6>Dog Walker</h6>
+                <span class="lead">Dog Walker</span>
             </div>
             <div class="services-cards-card">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-taxi fa-3x"></i>
                 </div>
-                <h6>Táxi Dog</h6>
+                <span class="lead">Táxi Dog</span>
             </div>
         </div>
 
@@ -118,7 +115,7 @@
 
     <section class="installations">
         <div class="instalations-text w-2 h-2">
-            <h5>Nossas <b>Instalações</b></h5>
+            <h2>Nossas <b>Instalações</b></h2>
             <p>
                 Com modernas instalações distribuídas em mais de 800m² entre área externa e interna, tudo
                 foi pensado e planejado para que seu cãozinho possa socializar, brincar e descansar.
@@ -176,8 +173,8 @@
             </div>
             <div class="address">
                 <address>
-                    <h3>R. Dr. José Elias, 43<br>
-                        Alto de Pinheiros, São Paulo - SP</h3>
+                    <span class="lead">R. Dr. José Elias, 43<br>
+                        Alto de Pinheiros, São Paulo - SP</span>
                 </address>
 
                 <p><i class="fa-solid fa-phone">&ensp;</i><i class="fa-brands fa-whatsapp">&ensp;</i>11 94860-7657</p>
