--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
 
     <section class="installations">
-        <div class="instalations-text w-2 h-2">
+        <div class="instalations-text w-2 h-2 wh">
             <h2>Nossas <b>Instalações</b></h2>
             <p>
                 Com modernas instalações distribuídas em mais de 800m² entre área externa e interna, tudo
