--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
     <header class="header">
-        <img src="assets/images/cooperdog.png" alt="Cooperdog" height="100px">
+        <span class="logo">
+            <!--  <img src="assets/images/cooperdog.png" alt="Cooperdog" height="100px">-->
+        </span>
         <nav id="nav">
             <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
                 aria-expanded="false">Menu
