--- a/index.html
+++ b/index.html
@@ -176,13 +176,17 @@
             <div class="address">
                 <address>
                     <span class="lead">R. Dr. José Elias, 43<br>
-                        Alto de Pinheiros, São Paulo - SP</span>
+                        Alto de Pinheiros,<br> São Paulo - SP</span>
                 </address>
 
-                <p><i class="fa-solid fa-phone">&ensp;</i><i class="fa-brands fa-whatsapp">&ensp;</i>11 94860-7657</p>
-                <p>Segunda a Sexta feira: das 06h00 às 22h00</p>
-                <p>Finais de semana e feriados: das 08h00 às 20h00</p>
+                <p><i class="fa-brands fa-whatsapp">&ensp;</i>11 94860-7657</p>
+                <p>Segunda a Sexta feira:<br> das 06h00 às 22h00</p>
+                <p>Finais de semana e feriados:<br> das 08h00 às 20h00</p>
+                <hr class="line">
+                </hr>
+                <div class="social-midias"><i class="fa-brands fa-instagram fa-2x"></i></div>
             </div>
+
         </div>
     </footer>
 
