--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     </main>
 
 
-    <section class="story">
+    <section class="story  color-2">
         <div class="story-image">
             <img src="assets/images/anna.jpeg">
         </div>
-        <div class="story-text">
-            <h2>Quem <b>Somos</b></h2>
+        <div class="story-text ">
+            <h2 class="color-1">Quem <b>Somos</b></h2>
             <p>
                 Tudo começou em 1981 quando Anna Camargo, bióloga, precisava viajar e não encontrava
                 um hotel onde pudesse deixar seu pet. Com inicio na Vila Romana o hotel logo começou a
@@ -62,11 +62,11 @@
         </div>
     </section>
 
-    <section class="services">
+    <section class="services color-10 ">
 
         <div class="services-description">
             <div class="services-text">
-                <h2>Nossos <b>Serviços</b></h2>
+                <h2 class="color-1">Nossos <b>Serviços</b></h2>
                 <p>Com maior capacidade de atendimento novos serviços estão sendo oferecidos trazendo
                     mais conforto para os cães e aos seus tutores.
                 </p>
@@ -74,31 +74,31 @@
         </div>
 
         <div class="services-cards">
-            <div class="services-cards-card">
+            <div class="services-cards-card color-3">
                 <div class="services-cards-details">
-                    <i class="fa-solid fa-volleyball fa-3x"></i>
+                    <i class="fa-solid fa-volleyball fa-3x "></i>
                 </div>
                 <span class="lead">Day Care</span>
             </div>
-            <div class="services-cards-card">
+            <div class="services-cards-card color-4">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-bone fa-3x"></i>
                 </div>
                 <span class="lead">Adestramento</span>
             </div>
-            <div class="services-cards-card">
+            <div class="services-cards-card color-7">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-house-chimney fa-3x"></i>
                 </div>
                 <span class="lead">Hotel</span>
             </div>
-            <div class="services-cards-card">
+            <div class="services-cards-card color-6">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-dog fa-3x"></i>
                 </div>
                 <span class="lead">Dog Walker</span>
             </div>
-            <div class="services-cards-card">
+            <div class="services-cards-card color-8">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-taxi fa-3x"></i>
                 </div>
@@ -115,7 +115,7 @@
         no bem estar do seu pet!&ensp;<i class="fa-solid fa-paw"></i>
     </div>
 
-    <section class="installations">
+    <section class="installations color-9">
         <div class="instalations-text w-2 h-2 wh">
             <h2>Nossas <b>Instalações</b></h2>
             <p>
