--- a/index.html
+++ b/index.html
@@ -73,32 +73,32 @@
             </div>
         </div>
 
-        <div class="services-cards">
-            <div class="services-cards-card color-3">
+        <div class="services-cards ">
+            <div class="services-cards-card color-3 color-1">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-volleyball fa-3x "></i>
                 </div>
                 <span class="lead">Day Care</span>
             </div>
-            <div class="services-cards-card color-4">
+            <div class="services-cards-card color-4 color-1">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-bone fa-3x"></i>
                 </div>
                 <span class="lead">Adestramento</span>
             </div>
-            <div class="services-cards-card color-7">
+            <div class="services-cards-card color-7 color-1">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-house-chimney fa-3x"></i>
                 </div>
                 <span class="lead">Hotel</span>
             </div>
-            <div class="services-cards-card color-6">
+            <div class="services-cards-card color-6 color-1">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-dog fa-3x"></i>
                 </div>
                 <span class="lead">Dog Walker</span>
             </div>
-            <div class="services-cards-card color-8">
+            <div class="services-cards-card color-8 color-1">
                 <div class="services-cards-details">
                     <i class="fa-solid fa-taxi fa-3x"></i>
                 </div>
@@ -108,7 +108,7 @@
 
     </section>
 
-    <div class="message">
+    <div class="message color-1">
         <i class="fa-solid fa-paw"></i>
         &ensp; Socialização, atividades físicas, jogos e brincadeiras em grupo, tudo
         pensando
@@ -117,7 +117,7 @@
 
     <section class="installations color-9">
         <div class="instalations-text w-2 h-2 wh">
-            <h2>Nossas <b>Instalações</b></h2>
+            <h2 class="color-1">Nossas <b>Instalações</b></h2>
             <p>
                 Com modernas instalações distribuídas em mais de 800m² entre área externa e interna, tudo
                 foi pensado e planejado para que seu cãozinho possa socializar, brincar e descansar.
