--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
 <body>
     <header class="header">
+        <div class="contact">
+            <span><i class="fa-brands fa-whatsapp">&ensp;</i>11 94860-7657</span>
+        </div>
         <span class="logo">
-            <!--  <img src="assets/images/cooperdog.png" alt="Cooperdog" height="100px">-->
+            <!--     <img src="assets/images/cooperdog.png" alt="Cooperdog" height="100px">-->
         </span>
         <nav id="nav">
             <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
@@ -34,21 +37,22 @@
 
     <main class="main">
         <section class="main-info">
-            <h2>Bem estar</h2>
-            <h5>em cada espaço</h5>
+            <div class="main-head">
+                <span class="display">COOPERDOG</span>
+                <span class="lead">bem estar em cada espaço</span><br />
+            </div>
             <p>Aqui o seu pet poderá brincar, correr, tomar banho, receber carinho e amor e, acima de tudo, se
                 sentir feliz. E tudo isso vem de encontro com o estilo de vida que você possa vir a ter</p>
             <button class="btn-agendar">AGENDAR</button>
         </section>
     </main>
 
-
-    <section class="story  color-2">
+    <section class="story">
         <div class="story-image">
             <img src="assets/images/anna.jpeg">
         </div>
         <div class="story-text ">
-            <h2 class="color-1">Quem <b>Somos</b></h2>
+            <h2>Quem <b>Somos</b></h2>
             <p>
                 Tudo começou em 1981 quando Anna Camargo, bióloga, precisava viajar e não encontrava
                 um hotel onde pudesse deixar seu pet. Com inicio na Vila Romana o hotel logo começou a
@@ -62,74 +66,59 @@
         </div>
     </section>
 
-    <section class="services color-10 ">
+    <section class="services">
 
-        <div class="services-description">
-            <div class="services-text">
-                <h2 class="color-1">Nossos <b>Serviços</b></h2>
-                <p>Com maior capacidade de atendimento novos serviços estão sendo oferecidos trazendo
-                    mais conforto para os cães e aos seus tutores.
-                </p>
-            </div>
+        <div class="services-text">
+            <h2>Nossos <b>Serviços</b></h2>
+            <p>Com maior capacidade de atendimento novos serviços estão sendo oferecidos trazendo
+                mais conforto para os cães e aos seus tutores.
+            </p>
         </div>
 
         <div class="services-cards ">
-            <div class="services-cards-card color-3 color-1">
-                <div class="services-cards-details">
+            <a href="/pages/day-care.html">
+                <div class="item">
                     <i class="fa-solid fa-volleyball fa-3x "></i>
+                    <span>Day Care</span>
                 </div>
-                <span class="lead">Day Care</span>
+            </a>
+            <div class="item"><i class="fa-solid fa-bone fa-3x"></i>
+                <span>Adestramento</span>
             </div>
-            <div class="services-cards-card color-4 color-1">
-                <div class="services-cards-details">
-                    <i class="fa-solid fa-bone fa-3x"></i>
-                </div>
-                <span class="lead">Adestramento</span>
+            <div class="item"><i class="fa-solid fa-house-chimney fa-3x"></i>
+                <span>Hotel</span>
             </div>
-            <div class="services-cards-card color-7 color-1">
-                <div class="services-cards-details">
-                    <i class="fa-solid fa-house-chimney fa-3x"></i>
-                </div>
-                <span class="lead">Hotel</span>
-            </div>
-            <div class="services-cards-card color-6 color-1">
-                <div class="services-cards-details">
-                    <i class="fa-solid fa-dog fa-3x"></i>
-                </div>
-                <span class="lead">Dog Walker</span>
-            </div>
-            <div class="services-cards-card color-8 color-1">
-                <div class="services-cards-details">
-                    <i class="fa-solid fa-taxi fa-3x"></i>
-                </div>
-                <span class="lead">Táxi Dog</span>
-            </div>
+            <div class="item"><i class="fa-solid fa-dog fa-3x"></i>
+                Dog Walker</div>
+            <div class="item"><i class="fa-solid fa-taxi fa-3x"></i>
+                Táxi Dog</div>
         </div>
-
     </section>
 
-    <div class="message color-1">
-        <i class="fa-solid fa-paw"></i>
-        &ensp; Socialização, atividades físicas, jogos e brincadeiras em grupo, tudo
-        pensando
-        no bem estar do seu pet!&ensp;<i class="fa-solid fa-paw"></i>
-    </div>
+    <blockquote>
+        <div class="message">
+            <i class="fa-solid fa-paw"></i>
+
+            Socialização, atividades físicas, jogos e brincadeiras em grupo, tudo pensando
+            no bem estar do seu pet!
+
+            <i class="fa-solid fa-paw"></i>
+        </div>
+    </blockquote>
 
     <section class="installations color-9">
         <div class="instalations-text w-2 h-2 wh">
-            <h2 class="color-1">Nossas <b>Instalações</b></h2>
+            <h2>Nossas <b>Instalações</b></h2>
             <p>
                 Com modernas instalações distribuídas em mais de 800m² entre área externa e interna, tudo
                 foi pensado e planejado para que seu cãozinho possa socializar, brincar e descansar.
                 <br>
                 Contamos com amplo espaçõ para recreação e ideal para uma hospedagem com segurança, lazer
                 carinho e conforto que seu amiguinho merece.
-                <br>
-                <i>Não trabalhamos com baias individuais</i>
+                <br><br>
+                <em>Não trabalhamos com baias individuais</em>
             </p>
         </div>
-
-
         <figure class="instalations-itens w-2 h-1">
             <img src="assets/images/anna.jpeg" class="instalations-img" alt="Image 1">
         </figure>
@@ -139,13 +128,9 @@
         <figure class="instalations-itens w-1 h-1">
             <img src="assets/images/cachorrosPasseando.jpeg" class="instalations-img" alt="Image 1">
         </figure>
-
         <figure class="instalations-itens w-2 h-2">
             <img src="assets/images/cachorros grandes no banco.jpeg" class="instalations-img" alt="Image 1">
         </figure>
-
-
-
         <figure class="instalations-itens w-1 h-2">
             <img src="assets/images/cachorros sentados.jpeg" class="instalations-img" alt="Image 1">
         </figure>
@@ -162,8 +147,6 @@
 
     <!-- <div class="customers">Depoimentos</div>-->
 
-
-
     <footer>
         <div class="maps">
             <div class="iframe">
@@ -178,7 +161,6 @@
                     <span class="lead">R. Dr. José Elias, 43<br>
                         Alto de Pinheiros,<br> São Paulo - SP</span>
                 </address>
-
                 <p><i class="fa-brands fa-whatsapp">&ensp;</i>11 94860-7657</p>
                 <p>Segunda a Sexta feira:<br> das 06h00 às 22h00</p>
                 <p>Finais de semana e feriados:<br> das 08h00 às 20h00</p>
@@ -186,7 +168,6 @@
                 </hr>
                 <div class="social-midias"><i class="fa-brands fa-instagram fa-2x"></i></div>
             </div>
-
         </div>
     </footer>
 
