--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
     </section>
 
     <section class="services">
-
         <div class="services-text">
             <h2>Nossos <b>Serviços</b></h2>
             <p>Com maior capacidade de atendimento novos serviços estão sendo oferecidos trazendo
@@ -75,7 +74,7 @@
             </p>
         </div>
 
-        <div class="services-cards ">
+        <div class="services-cards">
             <a href="/pages/day-care.html">
                 <div class="item">
                     <i class="fa-solid fa-volleyball fa-3x "></i>
@@ -106,7 +105,7 @@
         </div>
     </blockquote>
 
-    <section class="installations color-9">
+    <section class="installations">
         <div class="instalations-text w-2 h-2 wh">
             <h2>Nossas <b>Instalações</b></h2>
             <p>
