--- a/index.html
+++ b/index.html
@@ -15,44 +15,50 @@
 
 <body>
     <header class="header">
-        <div class="contact">
-            <span><i class="fa-brands fa-whatsapp">&ensp;</i>11 94860-7657</span>
-        </div>
         <span class="logo">
-            <!--     <img src="assets/images/cooperdog.png" alt="Cooperdog" height="100px">-->
+            <img src="assets/images/cooperdog-branco.png" alt="Cooperdog" height="100px">
         </span>
         <nav id="nav">
             <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
-                aria-expanded="false">Menu
+                aria-expanded="false">
                 <span id="menuBurger"></span>
             </button>
             <ul id="menu" role="menu">
                 <li><a href="#">home</a></li>
                 <li><a href="#">serviços</a></li>
-                <li><a href="#">contato</a></li>
+                <li><a href="#">instalações</a></li>
+                <li><a href="#">clientes</a></li>
                 <li><a href="#">localização</a></li>
+                <li><a href="#">contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main">
-        <section class="main-info">
-            <div class="main-head">
-                <span class="display">COOPERDOG</span>
-                <span class="lead">bem estar em cada espaço</span><br />
-            </div>
-            <p>Aqui o seu pet poderá brincar, correr, tomar banho, receber carinho e amor e, acima de tudo, se
-                sentir feliz. E tudo isso vem de encontro com o estilo de vida que você possa vir a ter</p>
-            <button class="btn-agendar">AGENDAR</button>
-        </section>
-    </main>
-
-    <section class="story">
-        <div class="story-image">
-            <img src="assets/images/anna.jpeg">
+    <main>
+        <div class="main_title">
+            <h1>Cooperdog</h1>
+            <h4>bem estar em cada espaço</h4>
         </div>
+        <div class="main_content">
+            <p>Aqui o seu pet poderá brincar, correr, tomar banho, receber carinho e amor e, acima de tudo, se sentir
+                feliz. E tudo
+                isso vem de encontro com o estilo de vida que você possa vir a ter</p>
+        </div>
+        <div class="main_footer">
+            <button class="btn-agendar">
+                <a href="https://api.whatsapp.com/send?phone=5511948607657" target="_blank" class="agendar"><i
+                        class="fa-brands fa-whatsapp "></i><span>Agendar</span></a>
+            </button>
+        </div>
+    </main>
+    <section class="story">
+        <div class="about">
+            <img src="assets/images/anna.jpeg" width="400" height="400" alt="">
+
+        </div>
+
         <div class="story-text ">
-            <h2>Quem <b>Somos</b></h2>
+            <h2>Quem <strong>Somos</strong></h2>
             <p>
                 Tudo começou em 1981 quando Anna Camargo, bióloga, precisava viajar e não encontrava
                 um hotel onde pudesse deixar seu pet. Com inicio na Vila Romana o hotel logo começou a
@@ -68,7 +74,7 @@
 
     <section class="services">
         <div class="services-text">
-            <h2>Nossos <b>Serviços</b></h2>
+            <h2>Nossos <strong>Serviços</strong></h2>
             <p>Com maior capacidade de atendimento novos serviços estão sendo oferecidos trazendo
                 mais conforto para os cães e aos seus tutores.
             </p>
@@ -81,7 +87,8 @@
                     <span>Day Care</span>
                 </div>
             </a>
-            <div class="item"><i class="fa-solid fa-bone fa-3x"></i>
+            <div class="item">
+                <i class="fa-solid fa-bone fa-3x"></i>
                 <span>Adestramento</span>
             </div>
             <div class="item"><i class="fa-solid fa-house-chimney fa-3x"></i>
@@ -91,9 +98,10 @@
                 Dog Walker</div>
             <div class="item"><i class="fa-solid fa-taxi fa-3x"></i>
                 Táxi Dog</div>
+            <div class="item"><i class="fa-solid fa-shower fa-3x"></i>
+                Banho e Tosa</div>
         </div>
     </section>
-
     <blockquote>
         <div class="message">
             <i class="fa-solid fa-paw"></i>
@@ -106,45 +114,127 @@
     </blockquote>
 
     <section class="installations">
-        <div class="instalations-text w-2 h-2 wh">
-            <h2>Nossas <b>Instalações</b></h2>
+
+        <div class="installations-cards">
+
+            <div class="installations-item">
+                <img src="assets/images/adestramento.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/adestramento1.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/cachorrosPasseando.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/cachorros sentados.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/cachorros-na-grama.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/caes dormindo.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/adestramento.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/adestramento1.jpeg">
+            </div>
+            <div class="installations-item">
+                <img src="assets/images/cachorrosPasseando.jpeg">
+            </div>
+
+        </div>
+
+        <div class="installations-text">
+            <h2>Nossas <strong>Instalações</strong></h2>
             <p>
                 Com modernas instalações distribuídas em mais de 800m² entre área externa e interna, tudo
                 foi pensado e planejado para que seu cãozinho possa socializar, brincar e descansar.
                 <br>
-                Contamos com amplo espaçõ para recreação e ideal para uma hospedagem com segurança, lazer
+                Contamos com amplo espaço para recreação e ideal para uma hospedagem com segurança, lazer
                 carinho e conforto que seu amiguinho merece.
-                <br><br>
+                <br>
                 <em>Não trabalhamos com baias individuais</em>
+                <br>
+            <div class="btn-mobile">
+                <button class="btn-agendar">
+                    <a href="#" class="agendar">CONHEÇA</a>
+                </button>
+            </div>
             </p>
         </div>
-        <figure class="instalations-itens w-2 h-1">
-            <img src="assets/images/anna.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
-        <figure class="instalations-itens w-1 h-2">
-            <img src="assets/images/adestramento1.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
-        <figure class="instalations-itens w-1 h-1">
-            <img src="assets/images/cachorrosPasseando.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
-        <figure class="instalations-itens w-2 h-2">
-            <img src="assets/images/cachorros grandes no banco.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
-        <figure class="instalations-itens w-1 h-2">
-            <img src="assets/images/cachorros sentados.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
-        <figure class="instalations-itens w-1 h-1">
-            <img src="assets/images/caes dormindo.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
-        <figure class="instalations-itens w-1 h-1">
-            <img src="assets/images/dogsCapa.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
-        <figure class="instalations-itens w-1 h-1">
-            <img src="assets/images/cachorros-na-grama.jpeg" class="instalations-img" alt="Image 1">
-        </figure>
     </section>
 
-    <!-- <div class="customers">Depoimentos</div>-->
+    <div class="customers">
+
+        <h2>O que dizem nossos clientes</h2>
+        <section>
+            <ol class="cards">
+                <li class="card_customer">
+                    <div class="card_customer_figure">
+                        <img src="assets/images/customers/fulana1.png" alt="">
+                    </div>
+                    <div class="card_customer_testimony">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae dolor vitae augue
+                            molestie bibendum. Morbi
+                            malesuada eros eros, et blandit ligula pellentesque ut. Nunc ornare ante at velit blandit
+                            dapibus. </p>
+                    </div>
+                    <div class="card_customer_name">
+                        <p><strong>@Fulano_</strong></p>
+                    </div>
+                </li>
+                <li class="card_customer">
+                    <div class="card_customer_figure">
+                        <img src="assets/images/customers/fulana2.png" alt="">
+                    </div>
+                    <div class="card_customer_testimony">
+                        <p>O ambiente eh perfeito. Nossos Cães tem total contato com a natureza, nadam Em piscina
+                            própria para eles. Tudo eh bem
+                            higienizado e contam com veterinários 24 horas. Mas o mais importante, eh o carinho que ela
+                            recebeu a cada vez que
+                            esteve la. Vale a pena!</p>
+                    </div>
+                    <div class="card_customer_name">
+                        <p><strong>@annanóia</strong></p>
+                    </div>
+                </li>
+                <li class="card_customer">
+                    <div class="card_customer_figure">
+                        <img src="assets/images/customers/fulana3.png" alt="">
+                    </div>
+                    <div class="card_customer_testimony">
+                        <p>Preenche uma necessidade cada vez mais importante, que é a hospedagem de animais de estimação
+                            em um ambiente
+                            diferenciado, onde cuidados de profissionais com longa experiência no manejo de cães fazes a
+                            grande diferença.!</p>
+                    </div>
+                    <div class="card_customer_name">
+                        <p><strong>@anna_camargo</strong></p>
+                    </div>
+                </li>
+                <li class="card_customer">
+                    <div class="card_customer_figure">
+                        <img src="assets/images/customers/fulana4.png" alt="">
+                    </div>
+                    <div class="card_customer_testimony">
+                        <p>Os que amam seus animais sabem o quanto é importante ter um lugar seguro, bem organizado e
+                            cuidadosamente tratado para
+                            deixar seu pet quando isto se faz necessário. Paulo é um apaixonado por cães, e, bem por
+                            isso, os trata com enorme
+                            carinho e respeito.</p>
+                    </div>
+                    <div class="card_customer_name">
+                        <p><strong>@cooperanha</strong></p>
+                    </div>
+                </li>
+
+            </ol>
+        </section>
+
+    </div>
 
     <footer>
         <div class="maps">
@@ -155,20 +245,46 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
-            <div class="address">
-                <address>
-                    <span class="lead">R. Dr. José Elias, 43<br>
-                        Alto de Pinheiros,<br> São Paulo - SP</span>
-                </address>
-                <p><i class="fa-brands fa-whatsapp">&ensp;</i>11 94860-7657</p>
-                <p>Segunda a Sexta feira:<br> das 06h00 às 22h00</p>
-                <p>Finais de semana e feriados:<br> das 08h00 às 20h00</p>
-                <hr class="line">
-                </hr>
-                <div class="social-midias"><i class="fa-brands fa-instagram fa-2x"></i></div>
-            </div>
+
+            <address>
+                <div class="address-location">
+                    <div class="contact">
+                        <h2>Funcionamento</h2>
+                        <b>Horários do Day Care</b><br>
+                        Segunda a Sexta feira: <b> 06h às 22h</b><br>
+                        Finais de semana e feriados:<b> 08h às 20h</b><br>
+                        <br>
+                        <b>Horários do Hotel</b><br>
+                        Todos os dias<br>
+                        Check-in: <b>07h às 12h</b><br>
+                        Check-out:<b> 07h às 22h</b><br>
+                    </div>
+
+                    <div class="midias_sociais">
+                        <h2>Redes Sociais</h2>
+                        <a href="https://www.instagram.com/cooper.dog1/">
+                            <i class="fa-brands fa-instagram fa-2x"></i></a>
+                        <a href="https://api.whatsapp.com/send?phone=5511948607657" target="_blank"><i
+                                class="fa-brands fa-whatsapp fa-2x">&ensp;</i>11 94860-7657</a>
+                    </div>
+
+                    <div class="endereco">
+                        <h2>COOPERDOG</h2>
+                        <i class="fa-solid fa-location-dot">&ensp;</i>
+                        R. Dr. José Elias, 43<br>
+                        Alto de Pinheiros,<br>
+                        São Paulo - SP
+                    </div>
+
+
+                </div>
+
+
+            </address>
         </div>
     </footer>
+
+    </div>
 
     <script src="source/js/main.js"></script>
 </body>
