--- a/index.html
+++ b/index.html
@@ -117,33 +117,19 @@
 
         <div class="installations-cards">
 
-            <div class="installations-item">
-                <img src="assets/images/adestramento.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/adestramento1.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/cachorrosPasseando.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/cachorros sentados.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/cachorros-na-grama.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/caes dormindo.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/adestramento.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/adestramento1.jpeg">
-            </div>
-            <div class="installations-item">
-                <img src="assets/images/cachorrosPasseando.jpeg">
-            </div>
+            <ul class="img-list">
+                <li class="installations-item"><img src="assets/images/adestramento.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/adestramento1.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/cachorros grandes no banco.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/cachorros sentados.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/cachorros-na-grama.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/cachorrosPasseando.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/dogsCapa.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/caes dormindo.jpeg"></li>
+                <li class="installations-item "><img src="assets/images/taxi dog1.jpeg"></li>
+            </ul>
+
+
 
         </div>
 
